--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,6 +2,9 @@ galaxy_info:
   author: your name
   description: your role description
   company: your company (optional)
+  role_name: devel
+  namespace: joe-speedboat
+
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
