--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,21 @@
     var: playbook_dir
 - debug:
     var: found_playbooks
-- name: Pause for 5 minutes to build
-  pause:
-    minutes: 5
+
+- name: find all task
+  become: no
+  find:
+    paths: "/runner"
+    recurse: yes
+    depth: 5
+    file_type: file
+  register: found_playbooks
+  delegate_to: localhost
+  run_once: yes
+- debug:
+    var: found_playbooks
+
+#- name: Pause for 5 minutes to build
+#  pause:
+#    minutes: 5
 ...
